new update by NDT